# thetacog-mcp

./: .gitignore  .npmignore  CHANGELOG.md  CONTENT-ALIGN-SPEC.md  LICENSE  PATENT.md  README.md  RETROAGE-SPEC.md  ROADMAP.md  dashboard.js  gmail-sync.js  next-engine.mjs  overview.js  package.json  postinstall.js  regen-hooks.js  server.js
.thetacog/: hooks-config.json  rules.db
.thetacog/cache/: pair-sigs-144-ecd094a6a9fa.json  reef-trajectory.ndjson
.thetacog/pmu/: reef-connectivity-directed.json
.workflow/: alacritty-performer.html  bucket-builder.html  bucket-discoverer.html  bucket-experimenter.html  bucket-operator.html  bucket-strategist.html  bucket-teacher.html  cognitive-dashboard-enhanced.html  cognitive-dashboard.html  cursor-laboratory.html  getting-started.html  iterm2-builder.html  kitty-operator.html  messages-network.html  rio-navigator.html  rooms.json  terminal-voice.html  thetacog-state-reader.js  thetacog-workspace-dashboard.html  vscode-architect.html  wezterm-vault.html
.workflow/prompts/: architect.md  builder.md  (+7 more)
hooks/: intervention-fire.example  post-commit-monorepo.sh  post-commit.example  pre-push.example
lib/: pmu-inspect.js
pmu-rust/: Cargo.toml  pmu-canon-check.sh
pmu-rust/src/: attest.rs  ballistic.rs  counter.rs  gate.rs  main.rs  matrix.rs  pointer_chase.rs  regions.rs  resident.rs  sense.rs  signature.rs  throughput.rs  transcript.rs
scripts/: bundle-pmu.mjs  gdd-iterate.sh  pmu-demo.mjs  pmu-report.mjs
tests/: attest-redpill.test.mjs  claims-check-npx-cold-run.test.mjs  dinner-demo.test.mjs  intervene.test.mjs
(+148 files in other folders)
