[package]
name = "pmu-onchip"
version = "0.1.0"
edition = "2021"
description = "On-chip PMU v0 — the ballistic XOR walk on the metal"
publish = false

[[bin]]
name = "pmu-onchip"
path = "src/main.rs"

# Rayon was added for PRO-G — the throughput runner needs work-stealing
# parallelism across walkers. The ballistic gate itself remains a pure
# hardware instruction; Rayon only schedules walkers across cores so we
# can saturate the 10 M5 cores when measuring walks/sec at scale.
[dependencies]
rayon = "1"
flate2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
ed25519-dalek = "2"
sha2 = "0.10"
hkdf = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
